# pypak

./: .appveyor.yml  .bandit.yml  .codecov.yml  .coderabbit.yaml  .coveragerc  .flake8.ini  .gitignore  .travis.yml  .yamllint.conf  LICENSE.md  Makefile  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml  labeler.yml
.github/workflows/: Labeler.yml  bandit.yml  codeql.yml  makefile-lint.yml  markdown-lint.yml  scorecards-analysis.yml  yaml-lint.yml
docs/: Makefile  conf.py  index.md  requirements.txt  toc.md
pak/: __init__.py  anything.py
pypak/: __init__.py  anything.py
tests/: __init__.py  check_codecov  context.py  profiling.py  test_basic.py
