[metadata]
name = pypak
version = 2.0.0r1
author = reactive-firewall
author-email = reactive-firewall@users.noreply.github.com
summary = python-repo template
description = file: README.md
home-page = https://github.com/reactive-firewall/pypak
download-url = https://github.com/reactive-firewall/pypak.git
license = file: LICENSE.md
classifiers =
	Development Status :: 5 - Stable
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 2.7
	Topic :: Security

[bdist_wheel]
universal=1

[files]
packages = pypak

[options]
packages = find:

[options.packages.find]
exclude =
    docs
    tests
